[package]
name = "image-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros", "tracing", "headers", "http2"] }
axum-extra = { version = "0.8.0", features = ["typed-routing"] }
clap = { version = "4.4.7", features = ["derive", "env"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
reqwest = { version = "0.11.22", default-features = false, features = ["gzip", "brotli", "deflate", "rustls-tls", "default-tls", "stream", "socks"] }
scraper = "0.18.1"
serde = { version = "1.0.190", features = ["alloc", "derive"] }
serde_json = { version = "1.0.108", features = ["alloc"] }
tokio = { version = "1.33.0", features = ["tracing", "rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "cors", "request-id", "catch-panic"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json", "local-time"] }
ulid = "1.1.0"
url = "2.4.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
